@@ -1,4 +1,4 @@
-.TH HDPARM 8 "January 2009" "Version 9.11"
+.TH HDPARM 8 "February 2009" "Version 9.12"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
@@ -41,7 +41,7 @@ Usage:
 Get/set bus state.
 .TP
 .I -B
-Set Advanced Power Management feature, if the drive supports it. A low value
+Query/set Advanced Power Management feature, if the drive supports it. A low value
 means aggressive power management and a high value means better performance.
 Possible settings range from values 1 through 127 (which permit spin-down),
 and values 128 through 254 (which do not permit spin-down).
