@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	9.11
-Entered-date:	2009-01-29
+Version:	9.12
+Entered-date:	2009-02-26
 Description:	hdparm - get/set hard disk parameters for Linux SATA/IDE drives.
+		v9.12 Lots of -I updates, -C updates; -B now reports current APM setting
 		v9.11 Fixed -I for ATAPI; added --prefer-ata12 for some USB enclosures
 		v9.10 Fixes for CF card detection/reporting
 		v9.9 Recalculate cyls when kernel returns a truncated value
@@ -85,7 +86,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		96K hdparm-9.11.tar.gz
+		96K hdparm-9.12.tar.gz
 		4K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
